k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drogon-app
  namespace: drogon-project
  labels:
    app: drogon-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: drogon-app
    spec:
      containers:
      - name: drogon-app
        image:
