k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drogon-app-ingress
  namespace: drogon-project
  labels:
    app.kubernetes.io/name: drogon-app-ingress
    app.kubernetes.io/part-of: drogon-project
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: drogon-app-svc
            port: 
              number: 3001
